manifests/local-staging/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway-staging # this should match the label of the istio-ingressgateway deployment
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway-staging # this should match the label of the istio-ingressgateway deployment
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.staging.local"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "staging-local-tls-secret"
      hosts:
        - "*.staging.local"
